# esp32-8048S070C

./: README.md  SQTest.sll  SQTest.spj  SQTest_events.py  platformio.ini
-.git/: config  index  packed-refs
-.git/logs/refs/heads/: develop
-.git/refs/heads/: develop
components/: PanelRecipe.ecomp
src/: chatgpt.cpp  chatgpt.hpp  ingredients.cpp  ingredients.hpp  lv_conf.h  main.cpp
src/gui/: gui.cpp  gui.h  recipe_screen.cpp  recipe_screen.h  recipe_screen.hpp  recipes_screen.cpp  recipes_screen.hpp  stepbystep_screen.cpp  stepbystep_screen.hpp
src/models/: recipe.hpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panelrecipe.c  ui_comp_panelrecipe.h
src/ui/images/: ui_img_3994418_internet_network_signal_wifi_wireless_icon_png.c  ui_img_9921876_spoon_fork_kitchen_restaurant_utensil_icon_png.c  ui_img_pizza_png.c
src/ui/screens/: ui_Components.c  ui_Main.c  ui_Options.c  ui_Recipe.c  ui_Recipes.c  ui_StepByStep.c
